Acomodando el modelo a la pagina

--- a/model.html
+++ b/model.html
@@ -10,7 +10,7 @@
 <body>
  
 <button id="opener">open the dialog</button>
-<div id="dialog" title="Dialog Title">I'm a dialog</div>
+<div id="dialog" >I'm a dialog</div>
  
 <script>
 $( "#dialog" ).dialog({ autoOpen: false });
