--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<script src="js/modernizr.custom.js"></script>
+        <script src="js/funciones.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -25,8 +26,9 @@
 					<a href="#fbsection3">Section 3</a>
 					<a href="#fbsection4">Section 4</a>
 					<a href="#fbsection5">Section 5</a>
+                    <a href="#">Section 6</a>
 				</nav>
-				<section id="fbsection1"></section>
+				<section id="fbsection1"><a href="#" onclick="mostrarInfo();">Mostrar Informacion extra</a></section>
 				<section id="fbsection2"></section>
 				<section id="fbsection3"></section>
 				<section id="fbsection4"></section>
