mejorando la caja de dialogo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
         
-         
+         <link href="css/jquery-ui-1.10.3.custom.css" rel="stylesheet">
 		<script src="js/modernizr.custom.js"></script>
         <script src="js/funciones.js"></script>
 	</head>
