agregando interaccion a los enlaces

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#fbsection3" >Mostrar Informacion extra3</a>
                 </nav>
             				
-				<section id="fbsection1"></section>
+				<section id="fbsection1"><a href="#" onclick="mostrar();">Mostrar Destino</a></section>
 				<section id="fbsection2"></section>
 				<section id="fbsection3"></section>
 				<section id="fbsection4"></section>
