cambios en el tab

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<body>
         <div id="dialogo">
             <div id="fondo"></div>
-            <div id="contenido_dialog" onclick="ocultar();">contenido de la caja</div>
+            <div id="contenido_dialog" >
+                <div id="info_destino" onclick="ocultar();">contenido de la caja</div>
+            </div>
         </div>
 		<div class="container">
 			<header class="clearfix">
