--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <div id="dialogo">
             <div id="fondo"></div>
             <div id="contenido_dialog" >
-                <div id="info_destino" onclick="ocultar();">contenido de la caja</div>
+                <div id="info_destino" onclick="ocultar();">
+                
+                </div>
             </div>
         </div>
 		<div class="container">
