--- a/index.html
+++ b/index.html
@@ -22,8 +22,21 @@
         <div id="dialogo">
             <div id="fondo"></div>
             <div id="contenido_dialog" >
-                <div id="info_destino" onclick="ocultar();">
-                
+                <div id="info_destino" >
+                    <button id="btn_cerrar_dialogo" onclick="ocultar();">Cerrar</button>
+                    <ul id="tabs">
+                        <li><a href="#" title="tab1">One</a></li>
+                        <li><a href="#" title="tab2">Two</a></li>
+                        <li><a href="#" title="tab3">Three</a></li>
+                        <li><a href="#" title="tab4">Four</a></li>
+                    </ul>
+
+                    <div id="content">
+                        <div id="tab1">...</div>
+                        <div id="tab2">...</div>
+                        <div id="tab3">...</div>
+                        <div id="tab4">...</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -94,6 +107,19 @@
           //$("#dialogo").dialog({ modal: true });
       }
 
+      $(document).ready(function() {
+        $("#content div").hide();
+        $("#tabs li:first").attr("id","current");
+        $("#content div:first").fadeIn();
+
+        $('#tabs a').click(function(e) {
+            e.preventDefault();
+            $("#content div").hide();
+            $("#tabs li").attr("id","");
+            $(this).parent().attr("id","current");
+            $('#' + $(this).attr('title')).fadeIn();
+        });
+    })();
 		</script>
 	</body>
 </html>
