ultimos cambios en tabs

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     </ul>
 
                     <div id="content">
-                        <div id="tab1">...</div>
-                        <div id="tab2">...</div>
-                        <div id="tab3">...</div>
-                        <div id="tab4">...</div>
+                        <div id="tab1">1</div>
+                        <div id="tab2">2</div>
+                        <div id="tab3">3</div>
+                        <div id="tab4">4</div>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
             $(this).parent().attr("id","current");
             $('#' + $(this).attr('title')).fadeIn();
         });
-    })();
+    });
 		</script>
 	</body>
 </html>
