Modificanndo la base de datos

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <div id="info_destino" >
                     <button id="btn_cerrar_dialogo" onclick="ocultar();">Cerrar</button>
                     <ul id="tabs">
-                        <li><a href="#" title="tab1">One</a></li>
-                        <li><a href="#" title="tab2">Two</a></li>
-                        <li><a href="#" title="tab3">Three</a></li>
-                        <li><a href="#" title="tab4">Four</a></li>
+                        <li><a href="#" title="tab1">Destino</a></li>
+                        <li><a href="#" title="tab2">Planes</a></li>
+                        <li><a href="#" title="tab3">Galería</a></li>
+                        <li><a href="#" title="tab4">Adicionales</a></li>
                     </ul>
 
                     <div id="content">
-                        <div id="tab1">1</div>
+                        <div id="tab1"></div>
                         <div id="tab2">2</div>
                         <div id="tab3">3</div>
                         <div id="tab4">4</div>
