--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                    <div id="subir" class="flecha_menu" onclick="subir();">subir</div>
                         <nav>                        
                             <a href="#fbsection1" title="section1" id="item1" class="cbp-fbcurrent">Mostrar Informacion extra1</a>
-                            <a href="#fbsection2" title="section2" id="item2">Mostrar Informacion extra2</a>
+                            <a href="#fbsection2" title="section2" id="San Gil">Mostrar Informacion extra2</a>
                             <a href="#fbsection3" title="section3" id="item3">Mostrar Informacion extra3</a>
                             <a href="#fbsection4" title="section4" id="item4">Mostrar Informacion extra4</a>
                             <a href="#fbsection5" title="section5" id="item5">Mostrar Informacion extra5</a>  
@@ -66,7 +66,7 @@
                     <div id="footer_menu" class="menu"></div>
             	</div>
 				<section id="fbsection1"></section>
-				<section id="fbsection2"><a href="javascript:mostrar()" title="section2" onclick="">Mas Información 2</a></section>
+				<section id="fbsection2"><a href="javascript:mostrar(this)" title="section2" onclick="">Mas Información 2</a></section>
 				<section id="fbsection3"><a href="javascript:mostrar()" title="section3" onclick="">Mas Información 3</a></section>
 				<section id="fbsection4"><a href="javascript:mostrar()" title="section4" onclick="">Mas Información 4</a></section>
 				<section id="fbsection5"><a href="javascript:mostrar()" title="section5" onclick="">Mas Información 5</a></section>
