--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div id="footer_menu" class="menu"></div>
             	</div>
 				<section id="fbsection1"></section>
-				<section id="fbsection2"><a href="javascript:mostrar(this)" title="section2" onclick="">Mas Información 2</a></section>
+				<section id="fbsection2"><a href="#" title="section2" >Mas Información 2</a></section>
 				<section id="fbsection3"><a href="javascript:mostrar()" title="section3" onclick="">Mas Información 3</a></section>
 				<section id="fbsection4"><a href="javascript:mostrar()" title="section4" onclick="">Mas Información 4</a></section>
 				<section id="fbsection5"><a href="javascript:mostrar()" title="section5" onclick="">Mas Información 5</a></section>
