Adicionando cambios en la interfax

--- a/index.html
+++ b/index.html
@@ -64,12 +64,18 @@
                         </nav>
                     <div id="bajar" class="flecha_menu" onclick="bajar();">bajar</div>
                     <div id="footer_menu" class="menu"></div>
-            	</div>
-				<section id="fbsection1"></section>
-				<section id="fbsection2"><a href="javascript:mostrar(1)" title="section2" >Mas Información 2</a></section>
-				<section id="fbsection3"><a href="javascript:mostrar()" title="section3" onclick="">Mas Información 3</a></section>
-				<section id="fbsection4"><a href="javascript:mostrar()" title="section4" onclick="">Mas Información 4</a></section>
-				<section id="fbsection5"><a href="javascript:mostrar()" title="section5" onclick="">Mas Información 5</a></section>
+            </div>
+				<section id="fbsection1">
+                    <div class="contenido_seccion">
+                        <a href="javascript:mostrar(1)" title="section1" class="perfil"></a>
+                    </div>
+                </section>
+				<section id="fbsection2"><a href="javascript:mostrar(2)" title="section2" class="perfil"></a></section>
+				<section id="fbsection3"><a href="javascript:mostrar()" title="section3" class="perfil"></a></section>
+				<section id="fbsection4"><a href="javascript:mostrar()" title="section4" class="perfil"></a></section>
+				<section id="fbsection5"><a href="javascript:mostrar()" title="section5" class="perfil"></a></section>
+                <section id="fbsection6"><a href="javascript:mostrar()" title="section6" class="perfil"></a></section>
+				<section id="fbsection7"><a href="javascript:mostrar()" title="section7" class="perfil"></a></section>
                
 			</div>
            
