--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
                         <a href="javascript:mostrar(1)" title="section1" class="perfil"></a>
                     </div>
                 </section>
-				<section id="fbsection2"><a href="javascript:mostrar(2)" title="section2" class="perfil"></a></section>
+				<section id="fbsection2">
+                    <div class="contenido_seccion">
+                        <a href="javascript:mostrar(2)" title="section2" class="perfil"></a>
+                    </div>
+                </section>
 				<section id="fbsection3"><a href="javascript:mostrar()" title="section3" class="perfil"></a></section>
 				<section id="fbsection4"><a href="javascript:mostrar()" title="section4" class="perfil"></a></section>
 				<section id="fbsection5"><a href="javascript:mostrar()" title="section5" class="perfil"></a></section>
