--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 			<header class="clearfix">
                 <nav>
                     <ul>
-                        <li><a>HOME</a></li>
-                        <li><a>EMPRESA</a></li>                       
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">EMPRESA</a></li>                       
                     </ul>
                 </nav>
 				  <div id="logo"></div>          
                  <nav>
                     <ul>                     
-                        <li><a>GALERÍA</a></li>
-                        <li><a>CONTACTO</a></li>
+                        <li><a href="#">GALERÍA</a></li>
+                        <li><a href="#">CONTACTO</a></li>
                     </ul>
                 </nav>
 			</header>
