arreglo de header para firefox

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li><a href="#">EMPRESA</a></li>                       
                     </ul>
                 </nav>
-				  <div id="logo"></div>          
+				  <div id="contenedor_logo"><div id="logo"></div></div>          
                  <nav>
                     <ul>                     
                         <li><a href="#">GALERÍA</a></li>
