arreglando la carga de datos y la ubicacion del scrooll

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <div id="info_destino" >
                     <button id="btn_cerrar_dialogo" onclick="ocultar();">Cerrar</button>
                     <ul id="tabs">
-                        <li><a href="#" onclick="mostrarInfoDestino();" title="destino">Destino</a></li>
-                        <li><a href="#" title="plan">Planes</a></li>
+                        <li><a href="javascript:mostrar('san_gil')" title="tab1">Destino</a></li>
+                        <li><a href="#" title="tab2">Planes</a></li>
                         <li><a href="#" title="tab3">Galería</a></li>
                         <li><a href="#" title="tab4">Adicionales</a></li>
                     </ul>
@@ -44,8 +44,8 @@
 			<header class="clearfix">
                 <nav>
                     <ul>
-                        <li><a href="#">EMPRESA</a></li>
-                        <li><a href="#">HOME</a></li>                       
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">EMPRESA</a></li>                       
                     </ul>
                 </nav>
 				  <div id="contenedor_logo"><div id="logo"></div></div>          
@@ -93,6 +93,6 @@
 		<script src="js/cbpFixedScrollLayout.js"></script>
         <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
         <script src="js/jquery-ui-1.10.3.custom.js"></script>
-         <script src="js/funciones.js"></script>
+         <script src="js/Funciones.js"></script>
 	</body>
 </html>
