--- a/info/san_gil.html
+++ b/info/san_gil.html
@@ -1,2 +1,17 @@
-<div id="contenido_destino"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p></div>
+<div id="contenido_destino"><p>EL PLAN INCLUYE<br>
+	Transporte ida y regreso<br>
+	Alimentación 04 Desayunos / 03 Cenas<br>
+	Alojamiento 3 noches en hotel campestre<br>
+	Parapente (Curiti)<br>
+	Rafting (Rio Fonce)<br>
+	Rappel<br>
+	Espeleología (Cueva del Indio)<br>
+	Caminata Cascadas de Juan Curí<br>
+	Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
+	Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
+	City Tour San Gil<br>
+	City Tour Barichara – Guane  (Entrada Museo)<br>
+	Asistencia Medica<br>
+	Coordinador de viaje<br>
+</p></div>
 <div id="imagen_destino"><img alt="San Gil" src="../images/san_gil.jpg"/></div>
