--- a/info/destino/amazonas.html
+++ b/info/destino/amazonas.html
@@ -1,4 +1,4 @@
-<div id="contenido_destino"><p>EL PLAN INCLUYE<br>
+<p id="contenido_destino" style="display:block;">EL PLAN INCLUYE<br>
 	Transporte ida y regreso<br>
 	Alimentación 04 Desayunos / 03 Cenas<br>
 	Alojamiento 3 noches en hotel campestre<br>
@@ -13,5 +13,5 @@
 	City Tour Barichara – Guane  (Entrada Museo)<br>
 	Asistencia Medica<br>
 	Coordinador de viaje<br>
-</p></div>
-<div id="imagen_destino"><img alt="San Gil" src="../images/san_gil.jpg"/></div>
+</p>
+<img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
