--- a/index.html
+++ b/index.html
@@ -25,17 +25,15 @@
                 <div id="info_destino" >
                     <button id="btn_cerrar_dialogo" onclick="ocultar();">Cerrar</button>
                     <ul id="tabs">
-                        <li><a href="javascript:mostrar('san_gil')" title="tab1">Destino</a></li>
+                        <li><a href="#" title="tab1">Destino</a></li>
                         <li><a href="#" title="tab2">Planes</a></li>
-                        <li><a href="#" title="tab3">Galería</a></li>
-                        <li><a href="#" title="tab4">Adicionales</a></li>
+                        <li><a href="#" title="tab3">Galería</a></li>                       
                     </ul>
 
                     <div id="content">
-                        <div id="tab1"></div>
+                        <div id="tab1">1</div>
                         <div id="tab2">2</div>
-                        <div id="tab3">3</div>
-                        <div id="tab4">4</div>
+                        <div id="tab3">3</div>                       
                     </div>
                 </div>
             </div>
@@ -64,9 +62,9 @@
                    <div id="subir" class="flecha_menu" onclick="subir();"></div>
                         <nav>                        
                             <a href="#fbsection1" title="section1" id="san_gil" class="cbp-fbcurrent">SAN GIL</a>
-                            <a href="#fbsection2" title="section2" id="eje_cafetero">EJE CAFETERO</a>
-                            <a href="#fbsection3" title="section3" id="llanos_orientales">LLANOS ORIENTALES</a>                            
-                            <a href="#fbsection4" title="section4" id="san_andres">SAN ANDRES</a>                                                      
+                            <a href="#fbsection2" title="section2" id="llanos_orientales">LLANOS ORIENTALES</a>                            
+                            <a href="#fbsection3" title="section3" id="san_andres">SAN ANDRES</a>       
+                            <a href="#fbsection4" title="section4" id="eje_cafetero">EJE CAFETERO</a>                                                                         
                             <a href="#fbsection5" title="section5" id="baru">BARÚ</a>         
                             <a href="#fbsection6" title="section6" id="amazonas">AMAZONAS</a> 
                         </nav>
@@ -74,9 +72,9 @@
                     <div id="footer_menu" class="menu"></div>
             </div>
 				<section id="fbsection1"><a href="javascript:mostrar('san_gil')" title="section1" class="perfil"></a></section>
-               	<section id="fbsection2"><a href="javascript:mostrar('eje_cafetero')" title="section2" class="perfil"></a></section>                        
-				<section id="fbsection3"><a href="javascript:mostrar('llanos_orientales')" title="section3" class="perfil"></a></section>
-				<section id="fbsection4"><a href="javascript:mostrar('san_andres')" title="section4" class="perfil"></a></section>
+               	<section id="fbsection2"><a href="javascript:mostrar('llanos_orientales')" title="section2" class="perfil"></a></section>                        
+				<section id="fbsection3"><a href="javascript:mostrar('san_andres')" title="section3" class="perfil"></a></section>
+				<section id="fbsection4"><a href="javascript:mostrar('eje_cafetero')" title="section4" class="perfil"></a></section>
 				<section id="fbsection5"><a href="javascript:mostrar('baru')" title="section5" class="perfil"></a></section>
                 <section id="fbsection6"><a href="javascript:mostrar('amazonas')" title="section6" class="perfil"></a></section>				           
 			</div>
@@ -93,6 +91,7 @@
 		<script src="js/cbpFixedScrollLayout.js"></script>
         <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
         <script src="js/jquery-ui-1.10.3.custom.js"></script>
-         <script src="js/Funciones.js"></script>
+        <script src="js/TabInfo.js"></script>
+        <script src="js/Funciones.js"></script>
 	</body>
 </html>
