--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <div id="bajar" class="flecha_menu" onclick="bajar();"></div>
                     <div id="footer_menu" class="menu"></div>
             </div>
-				<section id="fbsection1"><div id="titulo1"></div><div id="img_movil"></div><a href="javascript:mostrar('san_gil')" title="section1" class="perfil"></a></section>
-               	<section id="fbsection2"><a href="javascript:mostrar('llanos_orientales')" title="section2" class="perfil"></a></section>                        
+				<section id="fbsection1"><div id="img_movil"></div><a href="javascript:mostrar('san_gil')" title="section1" class="perfil"></a></section>
+               	<section id="fbsection2"><div id="img_movil2"></div><a href="javascript:mostrar('llanos_orientales')" title="section2" class="perfil"></a></section>                        
 				<section id="fbsection3"><a href="javascript:mostrar('san_andres')" title="section3" class="perfil"></a></section>
 				<section id="fbsection4"><a href="javascript:mostrar('eje_cafetero')" title="section4" class="perfil"></a></section>
 				<section id="fbsection5"><a href="javascript:mostrar('baru')" title="section5" class="perfil"></a></section>
