--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             </div>
 				<section id="fbsection1"><div id="img_movil"></div><a href="javascript:mostrar('san_gil')" title="section1" class="perfil"></a></section>
                	<section id="fbsection2"><div id="img_movil2"></div><a href="javascript:mostrar('llanos_orientales')" title="section2" class="perfil"></a></section>                        
-				<section id="fbsection3"><a href="javascript:mostrar('san_andres')" title="section3" class="perfil"></a></section>
-				<section id="fbsection4"><a href="javascript:mostrar('eje_cafetero')" title="section4" class="perfil"></a></section>
-				<section id="fbsection5"><a href="javascript:mostrar('baru')" title="section5" class="perfil"></a></section>
-                <section id="fbsection6"><a href="javascript:mostrar('amazonas')" title="section6" class="perfil"></a></section>				           
+				<section id="fbsection3"><div id="img_movil3"></div><a href="javascript:mostrar('san_andres')" title="section3" class="perfil"></a></section>
+				<section id="fbsection4"><div id="img_movil4"></div><a href="javascript:mostrar('eje_cafetero')" title="section4" class="perfil"></a></section>
+				<section id="fbsection5"><div id="img_movil5"></div><a href="javascript:mostrar('baru')" title="section5" class="perfil"></a></section>
+                <section id="fbsection6"><div id="img_movil6"></div><a href="javascript:mostrar('amazonas')" title="section6" class="perfil"></a></section>				           
 			</div>
            
 		</div>
