Se subieron datos de la base..

--- a/pages/Empresa.html
+++ b/pages/Empresa.html
@@ -43,7 +43,7 @@
                 <nav>
                     <ul>
                         <li><a href="#">HOME</a></li>
-                        <li><a href="pages/empresa.html">EMPRESA</a></li>                       
+                        <li><a href="#">EMPRESA</a></li>                       
                     </ul>
                 </nav>
 				  <div id="contenedor_logo"><div id="logo"></div></div>          
