--- a/info/planes/amazonas.html
+++ b/info/planes/amazonas.html
@@ -1,17 +1,21 @@
-<p id="contenido_destino" style="display:block;">EL PLAN INCLUYE<br>
-	Transporte ida y regreso<br>
-	Alimentación 04 Desayunos / 03 Cenas<br>
-	Alojamiento 3 noches en hotel campestre<br>
-	Parapente (Curiti)<br>
-	Rafting (Rio Fonce)<br>
-	Rappel<br>
-	Espeleología (Cueva del Indio)<br>
-	Caminata Cascadas de Juan Curí<br>
-	Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
-	Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
-	City Tour San Gil<br>
-	City Tour Barichara – Guane  (Entrada Museo)<br>
-	Asistencia Medica<br>
-	Coordinador de viaje<br>
+<p id="contenido_destino" style="display:block;">PLAN AMAZONAS EXÓTICA<br><br>
+
+EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
+* Transportes Aéreos Bogotá- Leticia – Bogotá<br>
+* Transporte Aeropuerto – Hotel – Aeropuerto<br>
+* Transporte terrestre y fluvial a los sitios<br>
+* Alojamiento 2 noches Hotel Waira Leticia, 1 noche Reserva Marasha, 1noche Hotel Casa selva (Puerto Nariño) o similar<br>
+* Alimentación Completa <br>
+* City tour por Leticia y Tabatinga (Visita a la casa de chocolate, Tiendas de Tabatinga, Parque Santander, Tiendas artesanales de Leticia)<br>
+* Ingreso reserva natural Marasha (Caminata, paseo en canoa por el lago, pesca artesanal , paseo nocturno en canoa avistamiento de caimán negro)<br>
+* Visita a Puerto Nariño (Visita isla de los micos, Visita comunidades indígenas Ticunas y Yaguas)<br>
+* Visita lagos de Tarapoto (Avistamiento de delfines rosados)<br>
+* Guías nativos<br>
+* Tarjeta de Asistencia Medica COLASISTENCIA<br>
+* Coordinador de viaje<br><br>
+
+NO INCLUYE<br>
+* Seguros Hoteleros, Tarjeta de entrada a Leticia, Gastos no estipulados en el plan.<br>
+
 </p>
-<img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
+<img alt="Amazonas" src="../images/amazonas.jpg" id="imagen_destino" style="display:block;"/>
