--- a/info/planes/eje_cafetero.html
+++ b/info/planes/eje_cafetero.html
@@ -1,17 +1,59 @@
-<p id="contenido_destino" style="display:block;">EL PLAN INCLUYE<br>
-	Transporte ida y regreso<br>
-	Alimentación 04 Desayunos / 03 Cenas<br>
-	Alojamiento 3 noches en hotel campestre<br>
-	Parapente (Curiti)<br>
-	Rafting (Rio Fonce)<br>
-	Rappel<br>
-	Espeleología (Cueva del Indio)<br>
-	Caminata Cascadas de Juan Curí<br>
-	Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
-	Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
-	City Tour San Gil<br>
-	City Tour Barichara – Guane  (Entrada Museo)<br>
-	Asistencia Medica<br>
-	Coordinador de viaje<br>
+<p id="contenido_destino" style="display:block;">PLAN TRADICIONAL EJE CAFETERO<br><br>
+
+EL PLAN INCLUYE(4 DIAS 3 NOCHES)<br>
+* Transporte ida y regreso<br>
+* Alimentación 04 Desayunos / 03 Cenas<br>
+* Coctel de Bienvenida<br>
+* Alojamiento 3 noches en hotel campestre<br>
+* Pasaporte Múltiple Parque Nacional del café <br>
+* Pasaporte Terra Parque Panaca<br>
+* Entrada Termales de Santa Rosa de Cabal <br>
+* Tour Panorámico (Armenia, Pereira, Salento, Quimbaya, Montenegro, Pueblo Tapao)<br>
+* Actividades Nocturnas<br>
+* Asistencia Medica<br>
+* Coordinador de viaje<br><br>
+
+NO INCLUYE<br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br><br>
+
+PLAN AVENTURA EJE CAFETERO<br><br>
+
+ EL PLAN INCLUYE(5 DIAS - 4 NOCHES)<br>
+* Transporte ida y regreso<br>
+* Alimentación 04 Desayunos / 03 Cenas / 01 Almuerzo<br>
+* Coctel de Bienvenida<br>
+* Alojamiento 4 noches en hotel campestre<br>
+* Pasaporte Múltiple Parque Nacional del café <br>
+* Pasaporte Terra Parque Panaca<br>
+* Entrada Termales de Santa Rosa de Cabal <br>
+* Balsaje Rio la Vieja<br>
+* Canopy<br>
+* Tour Panorámico (Armenia, Pereira, Salento, Quimbaya, Montenegro, Pueblo Tapao)<br>
+* Actividades Nocturnas<br>
+* Asistencia Medica<br>
+* Coordinador de viaje<br><br>
+
+NO INCLUYE<br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br><br>
+
+PLAN EJE CAFETERO – BUGA Y VIÑEDOS<br><br>
+
+ EL PLAN INCLUYE (6 DIAS - 5 NOCHES)<br>
+* Transporte ida y regreso<br>
+* Alimentación 05 Desayunos / 05 Cenas <br>
+* Coctel de Bienvenida<br>
+* Alojamiento 5 noches en hotel campestre<br>
+* Pasaporte Múltiple Parque Nacional del café <br>
+* Pasaporte Terra Parque Panaca<br>
+* Entrada Termales de Santa Rosa de Cabal <br>
+* Visita a la Basílica del Señor de los Milagros<br>
+* Visita a los Viñedos Grajales<br>
+* Tour Panorámico (Armenia, Pereira, Salento, Quimbaya, Montenegro, Pueblo Tapao)<br>
+* Actividades Nocturnas<br>
+* Asistencia Medica<br>
+* Coordinador de viaje<br><br>
+
+NO INCLUYE<br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
 </p>
-<img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
+<img alt="Eje Cafetero" src="../images/eje_cafetero.jpg" id="imagen_destino" style="display:block;"/>
