--- a/info/planes/llanos_orientales.html
+++ b/info/planes/llanos_orientales.html
@@ -1,17 +1,19 @@
-<p id="contenido_destino" style="display:block;">EL PLAN INCLUYE<br>
-	Transporte ida y regreso<br>
-	Alimentación 04 Desayunos / 03 Cenas<br>
-	Alojamiento 3 noches en hotel campestre<br>
-	Parapente (Curiti)<br>
-	Rafting (Rio Fonce)<br>
-	Rappel<br>
-	Espeleología (Cueva del Indio)<br>
-	Caminata Cascadas de Juan Curí<br>
-	Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
-	Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
-	City Tour San Gil<br>
-	City Tour Barichara – Guane  (Entrada Museo)<br>
-	Asistencia Medica<br>
-	Coordinador de viaje<br>
+<p id="contenido_destino" style="display:block;">PLAN LLANOS ORIENTALES<br><br>
+    
+EL PLAN INCLUYE (5 DIAS - 4 NOCHES)<br>
+* Transporte ida y regreso<br>
+* Alimentación 05 Desayunos / 04Cenas <br>
+* Alojamiento 4 noches en Finca Hotel Los gavilanes o similar<br>
+* Visita al parque Las Malocas (Entrada)<br>
+* Visita al Bioparque Los Ocaros (Entrada)<br>
+* Ruta del Amanecer Llanero (Puerto López – El Obelisco Ombligo de Colombia; Parque Merecure.<br>
+*  City Tour Villavicencio<br>
+* Visita a los municipios de: Restrepo, Cumaral, Acacias, Puerto López, Alto de Menegua, Río Humadea, Granada, Guamal y San Martín<br>
+* Tarjeta de Asistencia Medica COLASISTENCIA<br>
+* Coordinador de viaje<br><br>
+
+NO INCLUYE<br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
+
 </p>
-<img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
+<img alt="Llano Orientales" src="../images/llanos.jpg" id="imagen_destino" style="display:block;"/>
