--- a/info/planes/san_andres.html
+++ b/info/planes/san_andres.html
@@ -14,4 +14,4 @@
 	Asistencia Medica<br>
 	Coordinador de viaje<br>
 </p>
-<img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
+<img alt="San Andres" src="../images/san_andres.jpg" id="imagen_destino" style="display:block;"/>
