--- a/info/planes/san_gil.html
+++ b/info/planes/san_gil.html
@@ -1,17 +1,42 @@
-<p id="contenido_destino" style="display:block;">EL PLAN INCLUYE<br>
-	Transporte ida y regreso<br>
-	Alimentación 04 Desayunos / 03 Cenas<br>
-	Alojamiento 3 noches en hotel campestre<br>
-	Parapente (Curiti)<br>
-	Rafting (Rio Fonce)<br>
-	Rappel<br>
-	Espeleología (Cueva del Indio)<br>
-	Caminata Cascadas de Juan Curí<br>
-	Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
-	Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
-	City Tour San Gil<br>
-	City Tour Barichara – Guane  (Entrada Museo)<br>
-	Asistencia Medica<br>
-	Coordinador de viaje<br>
+<p id="contenido_destino" style="display:block;">PLAN SAN GIL AVENTURA TOTAL<br><br>
+
+EL PLAN INCLUYE (4 DIAS - 3 NOCHES)<br>
+* Transporte ida y regreso<br>
+* Alimentación 04 Desayunos / 03 Cenas<br>
+* Alojamiento 3 noches en hotel campestre<br>
+* Parapente (Curiti)<br>
+* Rafting (Rio Fonce)<br>
+* Rappel<br>
+* Espeleología (Cueva del Indio)<br>
+* Caminata Cascadas de Juan Curí<br>
+* Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
+* Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
+* City Tour San Gil<br>
+* City Tour Barichara – Guane  (Entrada Museo)<br>
+* Asistencia Medica<br>
+* Coordinador de viaje<br><br>
+
+NO INCLUYE<br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br><br>
+
+PLAN SAN GIL CULTURAL Y RELIGIOSO<br><br>
+
+EL PLAN INCLUYE (3 DIAS - 2 NOCHES)<br>
+* Transporte ida y regreso<br>
+* Alimentación 03 Desayunos / 02 Cenas<br>
+* Alojamiento 2 noches en hotel campestre<br>
+* Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
+* Tour mesa de los Santos<br>
+* City Tour San Gil<br>
+* City Tour Barichara – Guane  (Entrada Museo)<br>
+* Entrada Parque el Gallineral<br>
+* Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
+* Caminata Cascadas de Juan Curí<br>
+* Asistencia Medica<br>
+* Coordinador de viaje<br><br>
+
+<b>NO INCLUYE</b><br>
+* Seguros Hoteleros, Almuerzos, Gastos no estipulados en el plan.<br>
+
 </p>
 <img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
