--- a/info/decamerun/san_andres.html
+++ b/info/decamerun/san_andres.html
@@ -1,17 +1,17 @@
-<p id="contenido_destino" style="display:block;">EL PLAN INCLUYE<br>
-	Transporte ida y regreso<br>
-	Alimentación 04 Desayunos / 03 Cenas<br>
-	Alojamiento 3 noches en hotel campestre<br>
-	Parapente (Curiti)<br>
-	Rafting (Rio Fonce)<br>
-	Rappel<br>
-	Espeleología (Cueva del Indio)<br>
-	Caminata Cascadas de Juan Curí<br>
-	Visita Santuario Nuestra Señora de la Salud (Paramo)<br>
-	Pasaporte Parque Nacional del Chicamocha (Incluye Teleférico)<br>
-	City Tour San Gil<br>
-	City Tour Barichara – Guane  (Entrada Museo)<br>
-	Asistencia Medica<br>
-	Coordinador de viaje<br>
-</p>
-<img alt="San Gil" src="../images/san_gil.jpg" id="imagen_destino" style="display:block;"/>
+<div id="contenido"><p>Construido sobre el mar en punta Hansa el extremo Norte de la Isla, aproximadamente a 10 minutos del aeropuerto ya solo pocas cuadras del centro.
+
+El hotel cuenta con 283 habitaciones estándar, 12 junior suites y 2 master suites, con terraza y balcón, la mayoría con vista al mar y todas equipadas con baño, televisión por cable aire acondicionado, nevera, teléfono y cajilla de seguridad.
+
+<b>los delfines</b>
+Ofrece 36 habitaciones incluyendo 11 junior suites y 25 habitaciones estándar equipadas con un baño, secador de cabello, aire acondicionado, televisión por cable, teléfono, nevera y cajilla de seguridad.
+<b>Maryland</b>
+Ofrece sesenta y cinco habitaciones cómodas dotadas con aire acondicionado, secador de cabello, televisión por cable, teléfono, nevera y cajilla de seguridad. También ofrece a Diario desayunos estilo buffet, snacks, bar abierto, programa diario de actividades, counter de ventas de excursiones sillas para playa.
+<b>San Luis</b>
+EL hotel cuenta con 128  habitaciones divididas en 118 estándar, 8 junior suites y 2 master suites con balcón o terraza, restaurante tipo buffet disponible para desayunos almuerzos y cenas; caravelle y el Rodeo. Restaurantes a la carta disponibles para cenas snacks, 3 bares, spa, baño turco, centro de deportes náuticos, enfermería counter de ventas de excursiones, tienda de regalos y centro de convenciones.
+
+<b>El isleño (próximamente)</b>
+Cuenta con 220 amplias y modernas habitaciones la mayoría con vista al mar, restaurantes, estaciones de snacks, piscinas, spa, gimnasio, y un moderno centro de convenciones con capacidad para 700 personas, ofrece todo el apoyo logístico y avanzada tecnología para desarrollar eventos y seminarios
+<b>Club de Playa Rocky Cay</b>
+Disfrute de un día divertido en nuestro club de playa en San Andrés con carpas, sillas de playa y snacks servidos durante el día. Por la noche el club se convierte en un delicioso restaurante de comida de mar con capacidad para 110 personas. El servicio del club está disponible para todos los huéspedes de hoteles Decameron que visitan la isla.
+    </div>
+<div id="img"><img alt="San Andres" src="../images/san_gil.jpg" id="imagen_destino"></div>
