Finalizando cambios de decamerun

--- a/info/decamerun/cartagena.html
+++ b/info/decamerun/cartagena.html
@@ -2,4 +2,4 @@
 <p>El hotel ofrece 280 habitaciones en estándar u junior  suites, equipadas con baños, secador de cabello, servicio telefónico, aire acondicionado, televisión por cable.</p>
 <p>Incluye restaurantes tipo buffet, tres restaurantes a la carta especializados en comida de mar, steaks y gastronomía italiana; tres bares abiertos, terraza de snacks y pizzas.</p>
 <p>El Hotel Decameron de Cartagena ofrece a sus huéspedes, sin costo adicional y con transporte una cena romántica en los mejores restaurantes de Cartagena.</p></div>
-<div id="img"><img alt="Cartagena" src="../images/san_gil.jpg" id="imagen_destino"></div>
+<div id="img"><img alt="Cartagena" src="../images/decamerun/img_cartagena.jpg" id="imagen_centrada"></div>
