--- a/info/decamerun/palma.html
+++ b/info/decamerun/palma.html
@@ -5,4 +5,4 @@
 Cuenta con 220 amplias y modernas habitaciones la mayoría con vista al mar, restaurantes, estaciones de snacks, piscinas, spa, gimnasio, y un moderno centro de convenciones con capacidad para 700 personas, ofrece todo el apoyo logístico y avanzada tecnología para desarrollar eventos y seminarios
 <b>Club de Playa Rocky Cay</b>
 Disfrute de un día divertido en nuestro club de playa en San Andrés con carpas, sillas de playa y snacks servidos durante el día. Por la noche el club se convierte en un delicioso restaurante de comida de mar con capacidad para 110 personas. El servicio del club está disponible para todos los huéspedes de hoteles Decameron que visitan la isla.</div>
-<div id="img"><img alt="Isla Palma" src="../images/san_gil.jpg" id="imagen_destino"></div>
+<div id="img"><img alt="Isla Palma" src="../images/decamerun/img_palma.jpg" id="imagen_centrada"></div>
