--- a/info/decamerun/providencia.html
+++ b/info/decamerun/providencia.html
@@ -6,4 +6,4 @@ Posada del Mar, está ubicada en una propiedad frente a la playa en el sector de
 </p>
 <p>366 habitaciones, divididas en 321 habitaciones estándar (algunas con vista al mar y/o a la ciénaga) y 45 habitaciones Deluxe frente al mar, ambas equipadas con aire acondicionado, televisión por cable, secador de cabello terraza o balcón. 
 </p></div>
-<div id="img"><img alt="Providencia" src="../images/img.jpg" id="imagen_destino"></div>
+<div id="img"><img alt="Providencia" src="../images/decamerun/img_providencia.jpg" id="imagen_centrada"></div>
