--- a/info/decamerun/san_andres.html
+++ b/info/decamerun/san_andres.html
@@ -14,4 +14,4 @@ Cuenta con 220 amplias y modernas habitaciones la mayoría con vista al mar, res
 <b>Club de Playa Rocky Cay</b>
 Disfrute de un día divertido en nuestro club de playa en San Andrés con carpas, sillas de playa y snacks servidos durante el día. Por la noche el club se convierte en un delicioso restaurante de comida de mar con capacidad para 110 personas. El servicio del club está disponible para todos los huéspedes de hoteles Decameron que visitan la isla.
     </div>
-<div id="img"><img alt="San Andres" src="../images/san_gil.jpg" id="imagen_destino"></div>
+<div id="img"><img alt="San Andres" src="../images/decamerun/img_san_andres.jpg" id="imagen_centrada"></div>
