--- a/info/decamerun/providencia.html
+++ b/info/decamerun/providencia.html
@@ -2,8 +2,5 @@
 Está ubicado en una propiedad frente a la playa en el sector de South West Bay con 8 habitaciones dotadas con aire acondicionado, 8  habitaciones dotadas con aire acondicionado televisión por cable y mini bar, 4 de ellas con terraza y hamaca, el restaurante está abierto para desayuno almuerzo y comida. El bar y salón nocturnos está disponibles en horario nocturno, disfrute con cargo adicional, de masajes en la habitación incluye el desayuno.
 <b>Miss Elma, Posada del Mar</b>
 Miss Elma , tiene 6 cómodas habitaciones de acomodación múltiple de 2 a 5 personas, todas equipadas con aire acondicionado y televisión por cable, un restaurante con capacidad para 80 personas, abierto para desayuno almuerzo y cena donde puede disfrutar de las especialidades en comida típica isleña, un salón de juegos disponible  y un snack frente a la playa, incluye desayuno.
-Posada del Mar, está ubicada en una propiedad frente a la playa en el sector de agua dulce con 24 habitaciones dotadas con aire acondicionado, mini bar, televisión por cable, teléfono y servicio de agua caliente. Cuenta con piscina, parque infantil y un restaurante abierto únicamente abierto para el desayuno. Incluye el desayuno.
-</p>
-<p>366 habitaciones, divididas en 321 habitaciones estándar (algunas con vista al mar y/o a la ciénaga) y 45 habitaciones Deluxe frente al mar, ambas equipadas con aire acondicionado, televisión por cable, secador de cabello terraza o balcón. 
-</p></div>
+</div>
 <div id="img"><img alt="Providencia" src="../images/decamerun/img_providencia.jpg" id="imagen_centrada"></div>
