--- a/info/empresa/mision.html
+++ b/info/empresa/mision.html
@@ -1,4 +1,4 @@
-<div id="contenido"><p><b>EMPRESA</b><br>
+<div class="contenido_empresa"><p><b>EMPRESA</b><br>
 Terrazsantours es una agencia de viajes y turismo dedicada a la organización de planes e itinerarios además, de la venta de productos turísticos entre clientes y proveedores, con un fin único de poner bienes y servicios turísticos a disposición de quienes puedan suplir necesidades de disfrute.
 <br><br><b>MISIÓN</b><br>
 Terrazsantours es una agencia privada cuyo principal compromiso es la satisfacción de las necesidades de disfrute y descanso del cliente, ofreciendo servicios y productos de excelente calidad.
