--- a/info/decamerun/palma.html
+++ b/info/decamerun/palma.html
@@ -1,8 +1,5 @@
 <div id="contenido"><p><p>Es una exclusiva isla privada situada en el parque Nacional Natural Corales del Rosario y San Bernardo a solo tres Horas de Cartagena en bus más 15 minutos en lancha rápida. El hotel está rodeado de playas exóticas, arrecifes coralinos, flamingos rosados y manglares con una inmensa variedad de Fauna, flora continental y marina.</p>
 <p>El hotel tiene 42 habitaciones equipadas con baño, aire acondicionado, nevera y televisión por cable.</p>
 <p>Las instalaciones incluyen restaurante, tipo Buffet y a la carta, jacuzzi, bar la Punta, show de delfines, museo marino y acuario, coco spa y gimnasio.</p>
-<p><b>El isleño (próximamente)</b>
-Cuenta con 220 amplias y modernas habitaciones la mayoría con vista al mar, restaurantes, estaciones de snacks, piscinas, spa, gimnasio, y un moderno centro de convenciones con capacidad para 700 personas, ofrece todo el apoyo logístico y avanzada tecnología para desarrollar eventos y seminarios
-<b>Club de Playa Rocky Cay</b>
-Disfrute de un día divertido en nuestro club de playa en San Andrés con carpas, sillas de playa y snacks servidos durante el día. Por la noche el club se convierte en un delicioso restaurante de comida de mar con capacidad para 110 personas. El servicio del club está disponible para todos los huéspedes de hoteles Decameron que visitan la isla.</div>
+    </div>
 <div id="img"><img alt="Isla Palma" src="../images/decamerun/img_palma.jpg" id="imagen_centrada"></div>
